--- a/website/index.html
+++ b/website/index.html
@@ -7,38 +7,12 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-        <script>
-         "use strict";
-         function submitForm(oFormElement) {
-             var xhr = new XMLHttpRequest();
-             xhr.onload = function() {
-                 var result = parseFloat(xhr.responseText);
-                 var resultElement = document.getElementById('result');
-                 if (result == 0) {
-                     resultElement.className = 'bg-danger';
-                     resultElement.innerHTML = 'Your review was NEGATIVE!';
-                 } else {
-                     resultElement.className = 'bg-success';
-                     resultElement.innerHTML = 'Your review was POSITIVE!';
-                 }
-             }
-             xhr.open (oFormElement.method, oFormElement.action, true);
-             var review = document.getElementById('review');
-             xhr.send (review.value);
-             return false;
-         }
-        </script>
-
     </head>
     <body>
-
         <div class="container">
             <h1>Is your review positive, or negative?</h1>
             <p>Enter your review below and click submit to find out...</p>
-            <form method="POST"
-                  action="https://6j136zmx94.execute-api.us-east-2.amazonaws.com/prod"
-                  onsubmit="return submitForm(this);" >                     <!-- HERE IS WHERE YOU NEED TO ENTER THE API URL -->
+            <form id="submit-review" action="" >                     <!-- HERE IS WHERE YOU NEED TO ENTER THE API URL -->
                 <div class="form-group">
                     <label for="review">Review:</label>
                     <textarea class="form-control"  rows="5" id="review">Please write your review here.</textarea>
@@ -47,5 +21,35 @@
             </form>
             <h1 class="bg-success" id="result"></h1>
         </div>
+        <script>
+         "use strict";
+         $(document).ready(function(){
+             var resultElement = document.getElementById('result');
+             $('#submit-review').on('submit', function(e) {
+                 $.post({
+                     url: 'https://0zpe2p9s42.execute-api.us-east-2.amazonaws.com/prod',
+                     data: JSON.stringify({ body: document.getElementById('review').value }),
+                     dataType: 'json',
+                     contentType: 'application/json'
+                 })
+                  .done(function(response) {
+                      var number = Number.parseFloat(response.body);
+                      console.log(number);
+                      if (number) {
+                        resultElement.className = 'bg-success';
+                        resultElement.innerHTML = 'Your review was POSITIVE!';
+                      } else {
+                        resultElement.className = 'bg-danger';
+                        resultElement.innerHTML = 'Your review was NEGATIVE!';
+                      }
+                  })
+                  .fail(function() {
+                    resultElement.className = 'bg-danger';
+                    resultElement.innerHTML = 'Failure making the request';
+                  });
+                 e.preventDefault();
+             });
+         });
+        </script>
     </body>
 </html>
